# magistration_diplom

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/experiments/: custom_model_template.yaml  detr_resnet50.yaml  new_experiment.yaml  yolos_tiny.yaml
docker/mlflow/: Dockerfile  start-mlflow.sh
docker/torchserve/: Dockerfile  config.properties
docker/ui/: nginx.conf
docs/: README_ru.md  UI_ARCHITECTURE_BUILDER.md  architecture_extension.md  conclusions_ru_template.md  deployment_ru.md  full_analysis_framework_ru.md  grafana_web_view_ru.md  mlops_cluster_ru.md  resource_control_ru.md  results_template.md  thesis_methodology_ru.md  ui_control_center_ru.md
k8s/base/: blackbox-configmap.yaml  blackbox-deployment.yaml  blackbox-service.yaml  configmap.yaml  evaluation-job.yaml  grafana-dashboard-configmap.yaml  grafana-datasource-configmap.yaml  grafana-deployment.yaml  grafana-provisioning-configmap.yaml  kustomization.yaml  minio-deployment.yaml  minio-init-job.yaml  minio-pvc.yaml  mlflow-deployment.yaml  model-store-pvc.yaml  namespace.yaml  postgres-deployment.yaml  (+15 more)
scripts/: bootstrap.ps1  bootstrap.sh  export_torchserve.py  git_setup.ps1  git_setup.sh  k8s_apply.ps1  k8s_apply.sh  k8s_cleanup.ps1  k8s_cleanup.sh  mlops_build_images.ps1  mlops_build_images.sh  run_full_pipeline.ps1  run_full_pipeline.sh  torchserve_infer.ps1  torchserve_infer.sh  torchserve_register_model.ps1  torchserve_register_model.sh
tests/: test_config.py  test_control_app.py  test_mlflow_logger.py  test_registry.py  test_run_metrics_exporter.py  test_summarize.py  test_video_split.py
ui/: app.js  index.html  styles.css
workspace_state/: jobs.json
(+55 files in other folders)
